# 5A_SAT

./: .gitattributes  CMakeLists.txt  README.md
.github/workflows/: Doxyfile  docs.yaml
Solver/: Clause.cpp  Clause.hpp  Solver.cpp  Solver.hpp  basic_structures.cpp  basic_structures.hpp  heuristics.hpp  inout.cpp  inout.hpp
Solver/util/: Profiler.hpp  assert.hpp  cli.hpp  concepts.hpp  enum.hpp  exception.cpp  exception.hpp  random.cpp  random.hpp
Tests/: CMakeLists.txt  test_basic_structures.cpp  test_clause.cpp  test_solver.cpp  testing_utils.hpp
